# omni-translator

./: .gitignore  CLAUDE.md  build.bat  build.sh  dictionary.py  main.py  omni-translator.spec  prompt  pyproject.toml  storage.py  translation_history.json  translator.py  ui.py
.github/workflows/: release.yml
